services/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloaachen-ci
spec:
  selector:
    app: helloaachen
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8000
