services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloaachen-lb
  #labels:
  #  app: helloaachen
spec:
  selector:
    app: helloaachen
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
