services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloaachen-np
spec:
  selector:
    app: helloaachen
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8000
