services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloaachen-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /messages
        pathType: ImplementationSpecific
        backend:
          service:
            name: helloaachen-ci
            port:
              number: 9090
